# hydra-battles

./: dune-project
theories/additions/: dune
theories/gaia/: dune
theories/html/: additions.AM.html  additions.Addition_Chains.html  additions.BinaryStrat.html  additions.Compatibility.html  additions.Demo.html  additions.Demo_power.html  additions.Dichotomy.html  additions.Euclidean_Chains.html  additions.Fib2.html  additions.FirstSteps.html  additions.Monoid_def.html  additions.Monoid_instances.html  additions.More_on_positive.html  additions.Naive.html  additions.Pow.html  additions.Pow_variant.html  additions.Strategies.html  additions.Trace_exercise.html  additions.Wf_transparent.html  additions.fib.html  gaia_hydras.GCanon.html  gaia_hydras.GF_alpha.html  gaia_hydras.GHessenberg.html  gaia_hydras.GHprime.html  gaia_hydras.GHydra.html  gaia_hydras.GL_alpha.html  gaia_hydras.GLarge_Sets.html  gaia_hydras.GPaths.html  gaia_hydras.GPrelude.html  gaia_hydras.GaiaToHydra.html  gaia_hydras.HydraGaia_Examples.html  gaia_hydras.ON_gfinite.html  gaia_hydras.T1Bridge.html  gaia_hydras.T1Choice.html  gaia_hydras.T2Bridge.html  gaia_hydras.nfwfgaia.html  hydras.Ackermann.Deduction.html  hydras.Ackermann.LNN.html  hydras.Ackermann.LNN2LNT.html  hydras.Ackermann.LNT.html  (+131 more)
theories/ordinals/: dune
